...
  "reessayer": "Retry",
  "retour": "Back",
  "erreur": "Error",
  "tout": "All",
  "live": "Live",
  "vod": "Movies",
  "series": "Series",
  "serie": "Series",

  "changerProfil": "Switch profile",
  "ordreParDefaut": "Default order",
  "alphabetique": "Alphabetical",
  "parNumero": "By number",
...
